--- a/src/app/features/admin-layout/a-user-management/a-user-management.component.html
+++ b/src/app/features/admin-layout/a-user-management/a-user-management.component.html
@@ -1,4 +1,4 @@
-<main class="container mx-auto p-6 flex flex-col items-start bg-gray-50 min-h-screen">
+<main class="container mx-auto px-20 py-10 flex flex-col items-start bg-gray-50 min-h-screen">
   <!-- Header -->
   <header class="w-full">
     <h1 class="text-5xl font-extrabold text-[#283c1c]">User Management</h1>
