--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,13 +1,13 @@
-<header class="bg-white rounded-xl shadow-lg p-6 mt-8 mx-20 transform hover:scale-102 transition-all duration-300">
+<header class="bg-white rounded-xl shadow-lg px-6 py-2 mt-8 mx-14 transform hover:scale-102 transition-all duration-300">
     <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
         <!-- Profile Picture and Welcome Text -->
         <div class="flex items-center space-x-4">
-            <img src="profile-picture-url.jpg" alt="Profile Picture" class="w-12 h-12 rounded-full">
+            <img src="assets/logo/bini.jpg" alt="Right Image" class="w-16 h-16 object-cover rounded-full">
             <h2 class="text-2xl font-semibold text-[#283c1c]">Welcome palatog</h2>
         </div>
 
       
         <!-- Image on the right -->
-        <img src="image-url.jpg" alt="Right Image" class="w-24 h-24 object-cover rounded-md">
+        <img src="assets/logo/bini22.jpg" alt="Right Image" class="w-16 h-16 object-cover rounded-full">
     </div>
 </header>
